k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: import-products-ingress
  namespace: import-products
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: import-products.demo.com
    http:
      paths:
      # Frontend - No rewrite
      - path: /
        pathType: Prefix
        backend:
          service:
            name: import-products
            port:
              number: 80

      # Backend API - Rewrite applied in config snippet
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: import-products
            port:
              number: 81
